--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bson": "6.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "joi": "^17.10.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "5.13.14",
     "morgan": "1.10.0",
